--- a/glacium/templates/config.drop.j2
+++ b/glacium/templates/config.drop.j2
@@ -5,74 +5,80 @@
 
 # Category: Files
 
- FSP_FILE_CONVERGENCE converg.fensap.000002
- FSP_FILE_CRYSTAL_SOLUTION_MULTI "drop.*.Distribution.*/crystal"
+{% if prev_shot_index %}
+ DRP_RESTART_FILE droplet.drop.{{ prev_shot_index }}.disp
+{% else %}
+ DRP_RESTART_FILE
+{% endif %}
+ FSP_FILE_CONVERGENCE converg.drop.{{ shot_index }}
+ FSP_FILE_CRYSTAL_SOLUTION crystal.drop.{{ shot_index }}
+ FSP_FILE_CRYSTAL_SOLUTION_MULTI "drop.*.Distribution.*/crystal.drop.{{ shot_index }}"
  FSP_FILE_DISPLACEMENT timebc.dat
- FSP_FILE_GMRES_DATA gmres.out.fensap.000002
- FSP_FILE_OUTPUT_LOG out.fensap.000002
- FSP_FILE_SOLUTION_RESTART soln.fensap.000001.disp
- FSP_FILE_VARIABLE_ROUGHNESS roughness.dat.ice.000001.disp
+ FSP_FILE_GMRES_DATA gmres.out.drop.{{ shot_index }}
+ FSP_FILE_OUTPUT_LOG out.drop.{{ shot_index }}
+ FSP_FILE_SOLUTION_RESTART soln.fensap.{{ shot_index }}
+ FSP_FILE_VAPOR_SOLUTION vapor.drop.{{ shot_index }}
+{% if prev_shot_index %}
+ FSP_FILE_VAPOR_SOLUTION_RESTART NULL
+{% endif %}
  FSP_GUI_VAPOR_RESTART_FLAG 0
  FSP_INPUT_FILE_FORMAT 1
+ FSP_INPUT_FORCES NULL
  FSP_OUTPUT_FILE_FORMAT 1
  FSP_UNIT_ACTUATOR_DISK disk_data.dat
- GLB_FILE_FLOW_SOLUTION soln.fensap.000002
- GLB_FILE_GRID grid.ice.000002
- GLB_FILE_HEAT_FLUX hflux.dat.fensap.000002
- GLB_FILE_SURFACE_FORCES surface.dat.fensap.000002
+ GLB_FILE_DROPLET_SOLUTION droplet.drop.{{ shot_index }}
+{% if shot_index == "000001" %}
+ GLB_FILE_GRID "{{ GLB_FILE_GRID }}"
+{% else %}
+ GLB_FILE_GRID grid.ice.{{ shot_index }}
+{% endif %}
 
 # Category: Grid GUI metadata
 
- FSP_GUI_ITYP_BC_COLORS_B 3 0 0 255
- FSP_GUI_ITYP_BC_COLORS_G 3 0 255 0
- FSP_GUI_ITYP_BC_COLORS_R 3 255 0 0
+ FSP_GUI_ITYP_BC_COLORS_B 3 53 128 255
+ FSP_GUI_ITYP_BC_COLORS_G 3 53 128 0
+ FSP_GUI_ITYP_BC_COLORS_R 3 255 128 0
 
-# Geometrical characteristics
+# Category: Geometrical characteristics
+
 FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
 FSP_REF_AREA {{ FSP_REF_AREA }}
 
-# Parameters for time-accurate scheme
+# Category: Parameters for time-accurate scheme
+
+DRP_GUI_CFL {{ DRP_GUI_CFL }}
 FSP_DIMENSIONAL_TIME_STEP {{ FSP_DIMENSIONAL_TIME_STEP }}
 FSP_GUI_CFL {{ FSP_GUI_CFL }}
-FSP_GUI_CFLADAPT {{ FSP_GUI_CFLADAPT }}
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE }}
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE }}
-FSP_GUI_TIME_ACCURATE_SCHEME_ORDER {{ FSP_GUI_TIME_ACCURATE_SCHEME_ORDER }}
 FSP_GUI_VARIABLE_RELAXATION {{ FSP_GUI_VARIABLE_RELAXATION }}
 FSP_INVERSE_CFL {{ FSP_INVERSE_CFL }}
 FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE {{ FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE }}
 FSP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_MAX_TIME_STEPS_PER_CYCLE }}
-FSP_RLXITER {{ FSP_RLXITER }}
-FSP_RLXVAR {{ FSP_RLXVAR }}
 FSP_TIME_ACCURATE_SCHEME_ORDER {{ FSP_TIME_ACCURATE_SCHEME_ORDER }}
 FSP_TOTAL_SIMULATION_TIME {{ FSP_TOTAL_SIMULATION_TIME }}
 
-# Parameter cycles
+
+# Category: Parameter cycles
+
+DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
 FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
-FSP_ARTIFICIAL_VISCOSITY_TYPE {{ FSP_ARTIFICIAL_VISCOSITY_TYPE }}
 FSP_CYCLES_CONVERGENCE_CUTOFF {{ FSP_CYCLES_CONVERGENCE_CUTOFF }}
-FSP_GUI_CYCLE1_AV_COEF {{ FSP_GUI_CYCLE1_AV_COEF }}
 FSP_GUI_CYCLE1_AV_CUTOFF {{ FSP_GUI_CYCLE1_AV_CUTOFF }}
-FSP_GUI_CYCLE1_AV_SU_ORDER {{ FSP_GUI_CYCLE1_AV_SU_ORDER }}
-FSP_GUI_CYCLE1_AV_TYPE {{ FSP_GUI_CYCLE1_AV_TYPE }}
 FSP_NUMBER_OF_PARAMETER_CYCLES {{ FSP_NUMBER_OF_PARAMETER_CYCLES }}
-FSP_RATIO_AV_MATRIX_TO_AV_RESIDUAL {{ FSP_RATIO_AV_MATRIX_TO_AV_RESIDUAL }}
 FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL {{ FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL }}
 
-# Solution strategies
-FSP_RATIO_ENERGY_TO_CONTINUITY_AV {{ FSP_RATIO_ENERGY_TO_CONTINUITY_AV }}
-FSP_RATIO_MOMENTUM_TO_CONTINUITY_AV {{ FSP_RATIO_MOMENTUM_TO_CONTINUITY_AV }}
-FSP_RATIO_TURBULENCE_TO_CONTINUITY_AV {{ FSP_RATIO_TURBULENCE_TO_CONTINUITY_AV }}
 
-# Equations parameters
+# Category: Equations parameters
+
+FSP_DROPLET_EQUATIONS {{ FSP_DROPLET_EQUATIONS }}
 FSP_ENERGY_EQUATION {{ FSP_ENERGY_EQUATION }}
 FSP_GOVERNING_EQUATIONS {{ FSP_GOVERNING_EQUATIONS }}
-FSP_GUI_FENSAP_ENERGY_EQUATION {{ FSP_GUI_FENSAP_ENERGY_EQUATION }}
 FSP_GUI_SOLVER_MODE {{ FSP_GUI_SOLVER_MODE }}
 FSP_GUI_SOLVER_MODE_PROXY {{ FSP_GUI_SOLVER_MODE_PROXY }}
-FSP_SOLUTION_MODE {{ FSP_SOLUTION_MODE }}
 
+# Category: Reference conditions AIR
 
-# Reference conditions AIR
 FSP_FREESTREAM_PRESSURE {{ FSP_FREESTREAM_PRESSURE }}
 FSP_FREESTREAM_TEMPERATURE {{ FSP_FREESTREAM_TEMPERATURE }}
 FSP_FREESTREAM_VELOCITY {{ FSP_FREESTREAM_VELOCITY }}
@@ -80,26 +86,52 @@ FSP_GUI_USE_INITIAL_TEMPERATURE {{ FSP_GUI_USE_INITIAL_TEMPERATURE }}
 FSP_MACH_NUMBER {{ FSP_MACH_NUMBER }}
 FSP_REYNOLDS_NUMBER {{ FSP_REYNOLDS_NUMBER }}
 
-# Reference conditions DROPLET
-GLB_GUI_APPENDIX_SWITCH {{ GLB_GUI_APPENDIX_SWITCH }}
+# Category: Reference conditions DROPLET
 
-# Imposed velocities for AIR
-FSP_GUI_INITIAL_TYPE {{ FSP_GUI_INITIAL_TYPE }}
+FSP_FREESTREAM_DIAMETER {{ FSP_FREESTREAM_DIAMETER }}
+FSP_FREESTREAM_LWC {{ FSP_FREESTREAM_LWC }}
+FSP_WATER_DENSITY {{ FSP_WATER_DENSITY }}
+GLB_GUI_APPENDIX_SWITCH {{ GLB_GUI_APPENDIX_SWITCH }}
+GLB_GUI_USE_APPENDIX_C {{ GLB_GUI_USE_APPENDIX_C }}
+GLB_GUI_USE_APPENDIX_C_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_C_LWC_FACTOR }}
+GLB_GUI_USE_APPENDIX_D {{ GLB_GUI_USE_APPENDIX_D }}
+GLB_GUI_USE_APPENDIX_D_TWC_FACTOR {{ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR }}
+GLB_GUI_USE_APPENDIX_O {{ GLB_GUI_USE_APPENDIX_O }}
+GLB_GUI_USE_APPENDIX_O_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR }}
+
+
+# Category: Imposed velocities for AIR
+
+ FSP_ANGLE_OF_ATTACK_ALPHA 4
+ FSP_GUI_INITIAL_TYPE 1
 FSP_VELOCITY_X {{ FSP_VELOCITY_X }}
 FSP_VELOCITY_Y {{ FSP_VELOCITY_Y }}
 FSP_VELOCITY_Z {{ FSP_VELOCITY_Z }}
 
-# Gravity and rotation
+# Category: Imposed velocities for DROPLET
+
+ DRP_GUI_ANGLE_OF_ATTACK_ALPHA 4
+DRP_GUI_INITIAL_TYPE {{ DRP_GUI_INITIAL_TYPE }}
+FSP_DROPLET_INITIAL_VEL {{ FSP_DROPLET_INITIAL_VEL }}
+FSP_GUI_DROPLET_INITIAL_VEL_COMP_X {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_X }}
+FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y }}
+FSP_GUI_DROPLET_INITIAL_VEL_COMP_Z {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_Z }}
+
+
+# Category: Gravity and rotation
+
 FSP_GRAVITY {{ FSP_GRAVITY }}
 FSP_GUI_BODY_FORCES {{ FSP_GUI_BODY_FORCES }}
 
-# Boundary conditions
+# Category: Boundary conditions
+
 FSP_BC_SUBTYPE {{ FSP_BC_SUBTYPE }}
 FSP_GUI_ITYP_BC_NAMES {{ FSP_GUI_ITYP_BC_NAMES }}
 FSP_ITYP {{ FSP_ITYP }}
 FSP_TOT_BOUNDARY_CONDITIONS {{ FSP_TOT_BOUNDARY_CONDITIONS }}
 
-# Boundary conditions settings
+# Category: Boundary conditions settings
+
 FSP_CONTOUR_PRESS {{ FSP_CONTOUR_PRESS }}
 FSP_GUI_BC_INLET_SUPERSONIC_FLAG {{ FSP_GUI_BC_INLET_SUPERSONIC_FLAG }}
 FSP_GUI_BC_OUTLET_SUPERSONIC_FLAG {{ FSP_GUI_BC_OUTLET_SUPERSONIC_FLAG }}
@@ -123,7 +155,6 @@ FSP_GUI_WALL_OM_MAGNITUDE {{ FSP_GUI_WALL_OM_MAGNITUDE }}
 FSP_GUI_WALL_ROTATION_TYPE {{ FSP_GUI_WALL_ROTATION_TYPE }}
 FSP_IOPT {{ FSP_IOPT }}
 FSP_IWHERE {{ FSP_IWHERE }}
-FSP_NPRESS {{ FSP_NPRESS }}
 FSP_OM_CENT_X {{ FSP_OM_CENT_X }}
 FSP_OM_CENT_Y {{ FSP_OM_CENT_Y }}
 FSP_OM_CENT_Z {{ FSP_OM_CENT_Z }}
@@ -147,7 +178,8 @@ FSP_WALL_OMX {{ FSP_WALL_OMX }}
 FSP_WALL_OMY {{ FSP_WALL_OMY }}
 FSP_WALL_OMZ {{ FSP_WALL_OMZ }}
 
-# Boundary conditions DROP
+# Category: Boundary conditions DROP
+
 DRP_GUI_BC_DIAM {{ DRP_GUI_BC_DIAM }}
 DRP_GUI_BC_DIAM_CRYSTALS {{ DRP_GUI_BC_DIAM_CRYSTALS }}
 DRP_GUI_BC_DIAM_CRYSTALS_FLAG {{ DRP_GUI_BC_DIAM_CRYSTALS_FLAG }}
@@ -175,16 +207,18 @@ DRP_GUI_BC_VY_FLAG {{ DRP_GUI_BC_VY_FLAG }}
 DRP_GUI_BC_VZ {{ DRP_GUI_BC_VZ }}
 DRP_GUI_BC_VZ_CRYSTALS_FLAG {{ DRP_GUI_BC_VZ_CRYSTALS_FLAG }}
 DRP_GUI_BC_VZ_FLAG {{ DRP_GUI_BC_VZ_FLAG }}
+FSP_REINJECTION_SURFACE {{ FSP_REINJECTION_SURFACE }}
 FSP_VAPOR_WET_WALL {{ FSP_VAPOR_WET_WALL }}
 
-# Screen icing
+# Category: Screen icing
+
 FSP_GUI_BC_SCREEN_MODE {{ FSP_GUI_BC_SCREEN_MODE }}
 FSP_GUI_BC_SURFACE_TYPE_FLAG {{ FSP_GUI_BC_SURFACE_TYPE_FLAG }}
 FSP_WIRE_DIAMETER {{ FSP_WIRE_DIAMETER }}
 FSP_WIRE_SPACING {{ FSP_WIRE_SPACING }}
 
+# Category: Materials
 
-# Materials
 FSP_GUI_ID_MAT_COLORS_B {{ FSP_GUI_ID_MAT_COLORS_B }}
 FSP_GUI_ID_MAT_COLORS_G {{ FSP_GUI_ID_MAT_COLORS_G }}
 FSP_GUI_ID_MAT_COLORS_R {{ FSP_GUI_ID_MAT_COLORS_R }}
@@ -192,105 +226,101 @@ FSP_GUI_ID_MAT_NAMES {{ FSP_GUI_ID_MAT_NAMES }}
 FSP_GUI_IROTFUS_FLAG {{ FSP_GUI_IROTFUS_FLAG }}
 FSP_GUI_ROT_FIX_FLAG {{ FSP_GUI_ROT_FIX_FLAG }}
 FSP_ID_MAT {{ FSP_ID_MAT }}
-FSP_NB_MAT {{ FSP_NB_MAT }}
-FSP_ROT_AXE_X {{ FSP_ROT_AXE_X }}
-FSP_ROT_AXE_Y {{ FSP_ROT_AXE_Y }}
-FSP_ROT_AXE_Z {{ FSP_ROT_AXE_Z }}
-FSP_ROT_CENTER_X {{ FSP_ROT_CENTER_X }}
-FSP_ROT_CENTER_Y {{ FSP_ROT_CENTER_Y }}
-FSP_ROT_CENTER_Z {{ FSP_ROT_CENTER_Z }}
 FSP_ROT_FIX_FLAG {{ FSP_ROT_FIX_FLAG }}
-FSP_ROT_FUSELAGE_OPTION {{ FSP_ROT_FUSELAGE_OPTION }}
-FSP_ROT_SPEED {{ FSP_ROT_SPEED }}
 
-# Iterative solver control parameters
+# Category: Iterative solver control parameters
+
 FSP_NS_CONVERGENCE_CRITERIA {{ FSP_NS_CONVERGENCE_CRITERIA }}
 FSP_NS_KRYLOV_ITERATIONS {{ FSP_NS_KRYLOV_ITERATIONS }}
 FSP_NS_MAX_SOLVER_ITERATIONS {{ FSP_NS_MAX_SOLVER_ITERATIONS }}
 FSP_NS_PRECONDITIONER {{ FSP_NS_PRECONDITIONER }}
 
-# Energy solver control parameters
+# Category: Energy solver control parameters
+
 FSP_NRG_CONVERGENCE_CRITERIA {{ FSP_NRG_CONVERGENCE_CRITERIA }}
 FSP_NRG_KRYLOV_ITERATIONS {{ FSP_NRG_KRYLOV_ITERATIONS }}
 FSP_NRG_MAX_SOLVER_ITERATIONS {{ FSP_NRG_MAX_SOLVER_ITERATIONS }}
 
-# Turbulence solver control parameters
+# Category: Turbulence solver control parameters
+
 FSP_TUR_CONVERGENCE_CRITERIA {{ FSP_TUR_CONVERGENCE_CRITERIA }}
-FSP_TUR_MAX_SOLVER_ITERATIONS {{ FSP_TUR_MAX_SOLVER_ITERATIONS }}
 
+# Category: Drop solver control parameters
 
-# Turbulence
-FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE }}
-FSP_GUI_ROUGHNESS_TYPE {{ FSP_GUI_ROUGHNESS_TYPE }}
-FSP_GUI_TRANSITION_FLAG {{ FSP_GUI_TRANSITION_FLAG }}
-FSP_GUI_TURBULENCE_SWITCH {{ FSP_GUI_TURBULENCE_SWITCH }}
+FSP_DROP_CONVERGENCE_CRITERIA {{ FSP_DROP_CONVERGENCE_CRITERIA }}
+FSP_DROP_KRYLOV_ITERATIONS {{ FSP_DROP_KRYLOV_ITERATIONS }}
+FSP_DROP_MAX_SOLVER_ITERATIONS {{ FSP_DROP_MAX_SOLVER_ITERATIONS }}
+FSP_SUPG_COEF_1 {{ FSP_SUPG_COEF_1 }}
+FSP_SUPG_COEF_2 {{ FSP_SUPG_COEF_2 }}
+FSP_SUPG_TYPE {{ FSP_SUPG_TYPE }}
+
+# Category: Turbulence
+
 FSP_GUI_TURBULENCE_SWITCH_PREVIOUS {{ FSP_GUI_TURBULENCE_SWITCH_PREVIOUS }}
 FSP_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_RELAXATION_FACTOR_FOR_TURBULENCE }}
-FSP_TURBULENCE_MODEL_ITERATIONS {{ FSP_TURBULENCE_MODEL_ITERATIONS }}
 FSP_TURBULENCE_SWITCH {{ FSP_TURBULENCE_SWITCH }}
-FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO {{ FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO }}
 
-# ALE
-FSP_ALE_LEVELS_OF_ELEMENTS_AROUND_BODY {{ FSP_ALE_LEVELS_OF_ELEMENTS_AROUND_BODY }}
-FSP_GUI_ALE_MODE {{ FSP_GUI_ALE_MODE }}
+# Category: ALE
+
 FSP_RIGID_MOTION_COEFFS {{ FSP_RIGID_MOTION_COEFFS }}
 
-# Message printing
-FSP_GUI_ITERATIONS_BETWEEN_PRINTOUTS {{ FSP_GUI_ITERATIONS_BETWEEN_PRINTOUTS }}
-FSP_GUI_PRINTOUT_MODE {{ FSP_GUI_PRINTOUT_MODE }}
-FSP_GUI_SOLUTION_PRINTOUT_FOR_TIME_STEPS {{ FSP_GUI_SOLUTION_PRINTOUT_FOR_TIME_STEPS }}
-FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_FINAL_SOLUTION {{ FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_FINAL_SOLUTION }}
-FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_NEWTON_ITERATIONS {{ FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_NEWTON_ITERATIONS }}
-FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_PARAMETER_CYCLES {{ FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_PARAMETER_CYCLES }}
-FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_TIME_STEPS {{ FSP_HFLUX_AND_SURFACE_PRINTOUT_FOR_TIME_STEPS }}
-FSP_NEWTON_ITERATIONS_BETWEEN_PRINTOUTS {{ FSP_NEWTON_ITERATIONS_BETWEEN_PRINTOUTS }}
-FSP_PARAMETER_CYCLES_BETWEEN_PRINTOUTS {{ FSP_PARAMETER_CYCLES_BETWEEN_PRINTOUTS }}
-FSP_SOLUTION_PRINTOUT_FOR_FINAL_SOLUTION {{ FSP_SOLUTION_PRINTOUT_FOR_FINAL_SOLUTION }}
-FSP_SOLUTION_PRINTOUT_FOR_INITIAL_GUESS {{ FSP_SOLUTION_PRINTOUT_FOR_INITIAL_GUESS }}
-FSP_SOLUTION_PRINTOUT_FOR_NEWTON_ITERATIONS {{ FSP_SOLUTION_PRINTOUT_FOR_NEWTON_ITERATIONS }}
-FSP_SOLUTION_PRINTOUT_FOR_PARAMETER_CYCLES {{ FSP_SOLUTION_PRINTOUT_FOR_PARAMETER_CYCLES }}
-FSP_SOLUTION_PRINTOUT_FOR_TIME_STEPS {{ FSP_SOLUTION_PRINTOUT_FOR_TIME_STEPS }}
+# Category: Message printing
+
+DRP_GUI_ITERATIONS_BETWEEN_PRINTOUTS {{ DRP_GUI_ITERATIONS_BETWEEN_PRINTOUTS }}
+DRP_GUI_PRINTOUT_MODE {{ DRP_GUI_PRINTOUT_MODE }}
+FSP_DROP_PRINT_ITER_FLAG {{ FSP_DROP_PRINT_ITER_FLAG }}
 FSP_TIME_STEPS_BETWEEN_PRINTOUTS {{ FSP_TIME_STEPS_BETWEEN_PRINTOUTS }}
 
+# Category: Lift and moment reference point
 
-# Lift and moment reference point
-FSP_DRAG_VECTOR_COMPONENT_X {{ FSP_DRAG_VECTOR_COMPONENT_X }}
-FSP_DRAG_VECTOR_COMPONENT_Y {{ FSP_DRAG_VECTOR_COMPONENT_Y }}
-FSP_DRAG_VECTOR_COMPONENT_Z {{ FSP_DRAG_VECTOR_COMPONENT_Z }}
-FSP_GUI_DRAG_BC {{ FSP_GUI_DRAG_BC }}
-FSP_GUI_DRAG_DIRECTION {{ FSP_GUI_DRAG_DIRECTION }}
-FSP_LIFT_AXIS {{ FSP_LIFT_AXIS }}
-FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X {{ FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X }}
-FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Y {{ FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Y }}
-FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Z {{ FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Z }}
+ FSP_DRAG_VECTOR_COMPONENT_X 0.99756405026
+ FSP_DRAG_VECTOR_COMPONENT_Y 0.0697564737441
+ FSP_GUI_DRAG_BC 1000
+ FSP_GUI_DRAG_DIRECTION 2
+ FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X 0.10775
+ FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Y 0.02155
 
-# Droplet parameters
+# Category: Droplet parameters
+
+DRP_GUI_CRYSTAL_DISTRIBUTION {{ DRP_GUI_CRYSTAL_DISTRIBUTION }}
+DRP_GUI_DROPLET_DISTRIBUTION {{ DRP_GUI_DROPLET_DISTRIBUTION }}
 DRP_GUI_DROPLET_NUMBER {{ DRP_GUI_DROPLET_NUMBER }}
+DRP_GUI_USER_CRYSTAL_AR_DIST {{ DRP_GUI_USER_CRYSTAL_AR_DIST }}
 DRP_GUI_USER_CRYSTAL_DIST {{ DRP_GUI_USER_CRYSTAL_DIST }}
 DRP_GUI_USER_DROPLET_MVD {{ DRP_GUI_USER_DROPLET_MVD }}
 DRP_GUI_USER_DROPLET_PERCENTILE {{ DRP_GUI_USER_DROPLET_PERCENTILE }}
 DRP_GUI_USER_DROPLET_RUN_FLAG {{ DRP_GUI_USER_DROPLET_RUN_FLAG }}
+FSP_BETA_CONVERGENCE {{ FSP_BETA_CONVERGENCE }}
+FSP_DROPLET_DRAG_RELATION {{ FSP_DROPLET_DRAG_RELATION }}
+FSP_DROP_DIRICHLET_WALL {{ FSP_DROP_DIRICHLET_WALL }}
+FSP_DROP_PROJECTION {{ FSP_DROP_PROJECTION }}
+FSP_DROP_TERMINAL_VELOCITY {{ FSP_DROP_TERMINAL_VELOCITY }}
 
-# Ice crystal parameters
+# Category: Ice crystal parameters
+
 FSP_VAPOR_SCHMIDT {{ FSP_VAPOR_SCHMIDT }}
 
-# Probes
+# Category: Probes
+
 FSP_NPROBES {{ FSP_NPROBES }}
 
-# FS
+# Category: FS
+
 FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE {{ FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE }}
 FSP_MFLOW_RLX {{ FSP_MFLOW_RLX }}
 
 # Category: Turbomachinery
+
 FSP_GUI_REINJECTION_FLAG {{ FSP_GUI_REINJECTION_FLAG }}
 FSP_RADIAL_EQUILIBRIUM_ITER_NUM {{ FSP_RADIAL_EQUILIBRIUM_ITER_NUM }}
 FSP_RADIAL_EQUILIBRIUM_ITER_START {{ FSP_RADIAL_EQUILIBRIUM_ITER_START }}
 FSP_RAD_EQ_PRESS_END {{ FSP_RAD_EQ_PRESS_END }}
 FSP_RAD_EQ_PRESS_START {{ FSP_RAD_EQ_PRESS_START }}
 
+# Category: DROP input profile
+
+ FSP_GUI_FLAG_MULTISHOT 1
+
 # Category: Undefined
+
 FSP_FILE_GRID_TIMESTAMP {{ FSP_FILE_GRID_TIMESTAMP }}
-
-
-
-
