--- a/glacium/templates/config.ice.j2
+++ b/glacium/templates/config.ice.j2
@@ -49,6 +49,7 @@ ICE_DEPOSITION_VARIANT {{ ICE_DEPOSITION_VARIANT }}
 # Category: Numerical
 ICE_AUTOMATIC_TIME_STEP {{ ICE_AUTOMATIC_TIME_STEP }}
 ICE_BC_SINK {{ ICE_BC_SINK }}
+ICE_BEAD_FLAG {{ ICE_BEAD_FLAG }}
 ICE_CHARAC_LENGTH {{ ICE_CHARAC_LENGTH }}
 ICE_FLUX_CHOICE {{ ICE_FLUX_CHOICE }}
 ICE_FREEZING_FRACTION {{ ICE_FREEZING_FRACTION }}
@@ -58,6 +59,7 @@ ICE_GUI_GRID_OUTPUT_FLAG {{ ICE_GUI_GRID_OUTPUT_FLAG }}
 ICE_GUI_INITIAL_TIME {{ ICE_GUI_INITIAL_TIME }}
 ICE_GUI_TOTAL_TIME {{ ICE_GUI_TOTAL_TIME }}
 ICE_MIN_CONCAVE_ANGLE {{ ICE_MIN_CONCAVE_ANGLE }}
+ICE_MODEL_BEAD {{ ICE_MODEL_BEAD }}
 ICE_NB_SINK {{ ICE_NB_SINK }}
 ICE_NUMBER_TIME_STEP {{ ICE_NUMBER_TIME_STEP }}
 ICE_SHAPE_SMOOTHING_ITERATIONS {{ ICE_SHAPE_SMOOTHING_ITERATIONS }}
@@ -135,6 +137,7 @@ ICE_GUI_BC_HFLUX {{ ICE_GUI_BC_HFLUX }}
 ICE_GUI_BC_NAMES {{ ICE_GUI_BC_NAMES }}
 ICE_GUI_CONDITIONS_COPIED {{ ICE_GUI_CONDITIONS_COPIED }}
 ICE_GUI_MATLIST {{ ICE_GUI_MATLIST }}
+ICE_GUI_SEQ_TYPE {{ ICE_GUI_SEQ_TYPE }}
 ICE_GUI_WALL_OMX_DETECTED {{ ICE_GUI_WALL_OMX_DETECTED }}
 ICE_GUI_WALL_OMY_DETECTED {{ ICE_GUI_WALL_OMY_DETECTED }}
 ICE_GUI_WALL_OMZ_DETECTED {{ ICE_GUI_WALL_OMZ_DETECTED }}
