Adjust multishot roughness and laplace handling

--- a/glacium/templates/config.fensap.j2
+++ b/glacium/templates/config.fensap.j2
@@ -235,6 +235,7 @@ FSP_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_RELAXATION_FACTOR_FOR_TURBULENCE }}
 FSP_TURBULENCE_MODEL_ITERATIONS {{ FSP_TURBULENCE_MODEL_ITERATIONS }}
 FSP_TURBULENCE_SWITCH {{ FSP_TURBULENCE_SWITCH }}
 FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO {{ FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO }}
+FSP_WALL_ROUGHNESS_SWITCH {{ FSP_WALL_ROUGHNESS_SWITCH }}
 
 # ALE
 FSP_ALE_LEVELS_OF_ELEMENTS_AROUND_BODY {{ FSP_ALE_LEVELS_OF_ELEMENTS_AROUND_BODY }}
@@ -286,6 +287,9 @@ FSP_NPROBES {{ FSP_NPROBES }}
 # FS
 FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE {{ FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE }}
 FSP_MFLOW_RLX {{ FSP_MFLOW_RLX }}
+{% if FSP_MAX_LAPLACE_ITERATIONS is defined %}
+FSP_MAX_LAPLACE_ITERATIONS {{ FSP_MAX_LAPLACE_ITERATIONS }}
+{% endif %}
 
 # Category: Turbomachinery
 FSP_GUI_REINJECTION_FLAG {{ FSP_GUI_REINJECTION_FLAG }}
