--- a/glacium/templates/config.fensap.j2
+++ b/glacium/templates/config.fensap.j2
@@ -38,7 +38,7 @@ FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
 FSP_REF_AREA {{ FSP_REF_AREA }}
 
 # Parameters for time-accurate scheme
-FSP_DIMENSIONAL_TIME_STEP {{ FSP_DIMENSIONAL_TIME_STEP }}
+FSP_DIMENSIONAL_TIME_STEP 0
 FSP_GUI_CFL {{ FSP_GUI_CFL }}
 FSP_GUI_CFLADAPT {{ FSP_GUI_CFLADAPT }}
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE }}
@@ -282,7 +282,8 @@ DRP_GUI_USER_DROPLET_RUN_FLAG {{ DRP_GUI_USER_DROPLET_RUN_FLAG }}
 FSP_VAPOR_SCHMIDT {{ FSP_VAPOR_SCHMIDT }}
 
 # Probes
-FSP_NPROBES {{ FSP_NPROBES }}
+ FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE 1
+ FSP_MFLOW_RLX 0.1
 
 # FS
 FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE {{ FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE }}
@@ -297,6 +298,10 @@ FSP_RADIAL_EQUILIBRIUM_ITER_NUM {{ FSP_RADIAL_EQUILIBRIUM_ITER_NUM }}
 FSP_RADIAL_EQUILIBRIUM_ITER_START {{ FSP_RADIAL_EQUILIBRIUM_ITER_START }}
 FSP_RAD_EQ_PRESS_END {{ FSP_RAD_EQ_PRESS_END }}
 FSP_RAD_EQ_PRESS_START {{ FSP_RAD_EQ_PRESS_START }}
+
+# Category: DROP input profile
+
+FSP_GUI_FLAG_MULTISHOT 1
 
 # Category: Undefined
 FSP_FILE_GRID_TIMESTAMP {{ FSP_FILE_GRID_TIMESTAMP }}
