--- a/glacium/templates/config.drop.j2
+++ b/glacium/templates/config.drop.j2
@@ -5,36 +5,24 @@
 
 # Category: Files
 
-{% if prev_shot_index %}
- DRP_RESTART_FILE droplet.drop.{{ prev_shot_index }}.disp
-{% else %}
- DRP_RESTART_FILE
-{% endif %}
+{{ " DRP_RESTART_FILE droplet.drop." ~ prev_shot_index ~ ".disp" if prev_shot_index else " DRP_RESTART_FILE" }}
  FSP_FILE_CONVERGENCE converg.drop.{{ shot_index }}
  FSP_FILE_CRYSTAL_SOLUTION crystal.drop.{{ shot_index }}
  FSP_FILE_CRYSTAL_SOLUTION_MULTI "drop.*.Distribution.*/crystal.drop.{{ shot_index }}"
+{{ " FSP_FILE_CRYSTAL_SOLUTION_RESTART crystal.drop." ~ prev_shot_index ~ ".disp" if prev_shot_index else "" }}
  FSP_FILE_DISPLACEMENT timebc.dat
-{% if FSP_GUI_NO_TIMEBC is defined %}
- FSP_GUI_NO_TIMEBC {{ FSP_GUI_NO_TIMEBC }}
-{% endif %}
  FSP_FILE_GMRES_DATA gmres.out.drop.{{ shot_index }}
  FSP_FILE_OUTPUT_LOG out.drop.{{ shot_index }}
  FSP_FILE_SOLUTION_RESTART soln.fensap.{{ shot_index }}
  FSP_FILE_VAPOR_SOLUTION vapor.drop.{{ shot_index }}
-{% if prev_shot_index %}
- FSP_FILE_VAPOR_SOLUTION_RESTART NULL
-{% endif %}
+{{ " FSP_FILE_VAPOR_SOLUTION_RESTART NULL" if prev_shot_index else "" }}
  FSP_GUI_VAPOR_RESTART_FLAG 0
  FSP_INPUT_FILE_FORMAT 1
  FSP_INPUT_FORCES NULL
  FSP_OUTPUT_FILE_FORMAT 1
  FSP_UNIT_ACTUATOR_DISK disk_data.dat
  GLB_FILE_DROPLET_SOLUTION droplet.drop.{{ shot_index }}
-{% if shot_index == "000001" %}
- GLB_FILE_GRID "{{ GLB_FILE_GRID }}"
-{% else %}
- GLB_FILE_GRID grid.ice.{{ shot_index }}
-{% endif %}
+{{ " GLB_FILE_GRID \"" ~ GLB_FILE_GRID ~ "\"" if shot_index == "000001" else " GLB_FILE_GRID grid.ice." ~ shot_index }}
 
 # Category: Grid GUI metadata
 
@@ -50,12 +38,11 @@ FSP_REF_AREA {{ FSP_REF_AREA }}
 # Category: Parameters for time-accurate scheme
 
 DRP_GUI_CFL {{ DRP_GUI_CFL }}
-FSP_DIMENSIONAL_TIME_STEP {{ FSP_DIMENSIONAL_TIME_STEP }}
-FSP_GUI_CFL {{ FSP_GUI_CFL }}
+FSP_DIMENSIONAL_TIME_STEP 1000000
 FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE }}
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE }}
 FSP_GUI_VARIABLE_RELAXATION {{ FSP_GUI_VARIABLE_RELAXATION }}
-FSP_INVERSE_CFL {{ FSP_INVERSE_CFL }}
+FSP_INVERSE_CFL 0.003333333333
 FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE {{ FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE }}
 FSP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_MAX_TIME_STEPS_PER_CYCLE }}
 FSP_TIME_ACCURATE_SCHEME_ORDER {{ FSP_TIME_ACCURATE_SCHEME_ORDER }}
@@ -74,11 +61,11 @@ FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL {{ FSP_RELAXATION_FACTOR_FO
 
 # Category: Equations parameters
 
-FSP_DROPLET_EQUATIONS {{ FSP_DROPLET_EQUATIONS }}
-FSP_ENERGY_EQUATION {{ FSP_ENERGY_EQUATION }}
-FSP_GOVERNING_EQUATIONS {{ FSP_GOVERNING_EQUATIONS }}
-FSP_GUI_SOLVER_MODE {{ FSP_GUI_SOLVER_MODE }}
-FSP_GUI_SOLVER_MODE_PROXY {{ FSP_GUI_SOLVER_MODE_PROXY }}
+FSP_DROPLET_EQUATIONS 2
+FSP_ENERGY_EQUATION 0
+FSP_GOVERNING_EQUATIONS 0
+FSP_GUI_SOLVER_MODE 1
+FSP_GUI_SOLVER_MODE_PROXY 1
 
 # Category: Reference conditions AIR
 
@@ -105,15 +92,15 @@ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR }}
 
 # Category: Imposed velocities for AIR
 
- FSP_ANGLE_OF_ATTACK_ALPHA 4
- FSP_GUI_INITIAL_TYPE 1
+ FSP_ANGLE_OF_ATTACK_ALPHA {{ FSP_ANGLE_OF_ATTACK_ALPHA }}
+ FSP_GUI_INITIAL_TYPE {{ FSP_GUI_INITIAL_TYPE }}
 FSP_VELOCITY_X {{ FSP_VELOCITY_X }}
 FSP_VELOCITY_Y {{ FSP_VELOCITY_Y }}
 FSP_VELOCITY_Z {{ FSP_VELOCITY_Z }}
 
 # Category: Imposed velocities for DROPLET
 
- DRP_GUI_ANGLE_OF_ATTACK_ALPHA 4
+ DRP_GUI_ANGLE_OF_ATTACK_ALPHA {{ DRP_GUI_ANGLE_OF_ATTACK_ALPHA }}
 DRP_GUI_INITIAL_TYPE {{ DRP_GUI_INITIAL_TYPE }}
 FSP_DROPLET_INITIAL_VEL {{ FSP_DROPLET_INITIAL_VEL }}
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_X {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_X }}
@@ -258,10 +245,11 @@ FSP_SUPG_COEF_2 {{ FSP_SUPG_COEF_2 }}
 FSP_SUPG_TYPE {{ FSP_SUPG_TYPE }}
 
 # Category: Turbulence
-
+FSP_GUI_ROUGHNESS_TYPE 1
 FSP_GUI_TURBULENCE_SWITCH_PREVIOUS {{ FSP_GUI_TURBULENCE_SWITCH_PREVIOUS }}
 FSP_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_RELAXATION_FACTOR_FOR_TURBULENCE }}
-FSP_TURBULENCE_SWITCH {{ FSP_TURBULENCE_SWITCH }}
+FSP_TURBULENCE_SWITCH 0
+FSP_WALL_ROUGHNESS_SWITCH 1
 
 # Category: ALE
 
