Postprocessing!! Colorful images. Cheers.

--- a/glacium/templates/FENSAP.FENSAP.par.j2
+++ b/glacium/templates/FENSAP.FENSAP.par.j2
@@ -20,9 +20,9 @@
 
 # Category: Grid GUI metadata
 
- FSP_GUI_ITYP_BC_COLORS_B 3 0 0 255
- FSP_GUI_ITYP_BC_COLORS_G 3 0 255 0
- FSP_GUI_ITYP_BC_COLORS_R 3 255 0 0
+ FSP_GUI_ITYP_BC_COLORS_B {{ FSP_GUI_ITYP_BC_COLORS_B }}
+ FSP_GUI_ITYP_BC_COLORS_G {{ FSP_GUI_ITYP_BC_COLORS_G }}
+ FSP_GUI_ITYP_BC_COLORS_R {{ FSP_GUI_ITYP_BC_COLORS_R }}
 
 # Geometrical characteristics
 FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
@@ -107,7 +107,7 @@ FSP_GUI_ICE_WALL_THICKNESS {{ FSP_GUI_ICE_WALL_THICKNESS }}
 FSP_GUI_INLET_ROTATION_TYPE {{ FSP_GUI_INLET_ROTATION_TYPE }}
 FSP_GUI_IRS_NITER_PRE {{ FSP_GUI_IRS_NITER_PRE }}
 FSP_GUI_IRS_NULL_PRE {{ FSP_GUI_IRS_NULL_PRE }}
-FSP_GUI_IRS_PRES_END 3 {{ FSP_GUI_IRS_PRES_END }}
+FSP_GUI_IRS_PRES_END {{ FSP_GUI_IRS_PRES_END }}
 FSP_GUI_IRS_PRES_START {{ FSP_GUI_IRS_PRES_START }}
 FSP_GUI_IWT {{ FSP_GUI_IWT }}
 FSP_GUI_PRESSURE_CONTOUR_INTEGRALS_INDEX {{ FSP_GUI_PRESSURE_CONTOUR_INTEGRALS_INDEX }}
