--- a/glacium/templates/FENSAP.ICE3D.par.j2
+++ b/glacium/templates/FENSAP.ICE3D.par.j2
@@ -83,7 +83,7 @@ ICE_AIR_FILE "{{ ICE_AIR_FILE }}"
 ICE_ANTI_ICING_FILE {{ ICE_ANTI_ICING_FILE }}
 ICE_CHT3D_FORMAT {{ ICE_CHT3D_FORMAT }}
 ICE_CONVERGENCE_FILE {{ ICE_CONVERGENCE_FILE }}
-ICE_CRYSTAL_FILE "{{ ICE_CRYSTAL_FILE }}"
+# ICE_CRYSTAL_FILE "{{ ICE_CRYSTAL_FILE }}"
 ICE_DISPLACED_GRID_FILE {{ ICE_DISPLACED_GRID_FILE }}
 ICE_DROPLET_FILE "{{ ICE_DROPLET_FILE }}"
 ICE_FORCE_FILE {{ ICE_FORCE_FILE }}
