Patches and updates for multishot

--- a/glacium/templates/MULTISHOT.drop.par.j2
+++ b/glacium/templates/MULTISHOT.drop.par.j2
@@ -21,9 +21,9 @@
 
 # Category: Grid GUI metadata
 
- FSP_GUI_ITYP_BC_COLORS_B 3 53 128 255
- FSP_GUI_ITYP_BC_COLORS_G 3 53 128 0
- FSP_GUI_ITYP_BC_COLORS_R 3 255 128 0
+ FSP_GUI_ITYP_BC_COLORS_B 4 0 53 128 255
+ FSP_GUI_ITYP_BC_COLORS_G 4 0 53 128 0
+ FSP_GUI_ITYP_BC_COLORS_R 4 0 255 128 0
 
 # Category: Geometrical characteristics
 FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
