--- a/glacium/templates/config.drop.j2
+++ b/glacium/templates/config.drop.j2
@@ -26,9 +26,9 @@
 
 # Category: Grid GUI metadata
 
- FSP_GUI_ITYP_BC_COLORS_B 3 53 128 255
- FSP_GUI_ITYP_BC_COLORS_G 3 53 128 0
- FSP_GUI_ITYP_BC_COLORS_R 3 255 128 0
+ FSP_GUI_ITYP_BC_COLORS_B 4 0 53 128 255
+ FSP_GUI_ITYP_BC_COLORS_G 4 0 53 128 0
+ FSP_GUI_ITYP_BC_COLORS_R 4 0 255 128 0
 
 # Category: Geometrical characteristics
 
@@ -48,7 +48,6 @@ FSP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_MAX_TIME_STEPS_PER_CYCLE }}
 FSP_TIME_ACCURATE_SCHEME_ORDER {{ FSP_TIME_ACCURATE_SCHEME_ORDER }}
 FSP_TOTAL_SIMULATION_TIME {{ FSP_TOTAL_SIMULATION_TIME }}
 
-
 # Category: Parameter cycles
 
 DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
@@ -57,7 +56,6 @@ FSP_CYCLES_CONVERGENCE_CUTOFF {{ FSP_CYCLES_CONVERGENCE_CUTOFF }}
 FSP_GUI_CYCLE1_AV_CUTOFF {{ FSP_GUI_CYCLE1_AV_CUTOFF }}
 FSP_NUMBER_OF_PARAMETER_CYCLES {{ FSP_NUMBER_OF_PARAMETER_CYCLES }}
 FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL {{ FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL }}
-
 
 # Category: Equations parameters
 
@@ -89,7 +87,6 @@ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR {{ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR }}
 GLB_GUI_USE_APPENDIX_O {{ GLB_GUI_USE_APPENDIX_O }}
 GLB_GUI_USE_APPENDIX_O_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR }}
 
-
 # Category: Imposed velocities for AIR
 
  FSP_ANGLE_OF_ATTACK_ALPHA {{ FSP_ANGLE_OF_ATTACK_ALPHA }}
@@ -106,7 +103,6 @@ FSP_DROPLET_INITIAL_VEL {{ FSP_DROPLET_INITIAL_VEL }}
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_X {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_X }}
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y }}
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_Z {{ FSP_GUI_DROPLET_INITIAL_VEL_COMP_Z }}
-
 
 # Category: Gravity and rotation
 
