--- a/glacium/templates/config.ice.j2
+++ b/glacium/templates/config.ice.j2
@@ -1,4 +1,5 @@
 # Category: Aerothermodynamic
+
 ICE_RECOVERY_FACTOR {{ ICE_RECOVERY_FACTOR }}
 ICE_REF_AIR_PRESSURE {{ ICE_REF_AIR_PRESSURE }}
 ICE_REF_TEMPERATURE {{ ICE_REF_TEMPERATURE }}
@@ -6,6 +7,7 @@ ICE_REF_VELOCITY {{ ICE_REF_VELOCITY }}
 ICE_TEMPERATURE {{ ICE_TEMPERATURE }}
 
 # Category: GUI
+
 GLB_GUI_USE_APPENDIX_C {{ GLB_GUI_USE_APPENDIX_C }}
 GLB_GUI_USE_APPENDIX_C_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_C_LWC_FACTOR }}
 GLB_GUI_USE_APPENDIX_D {{ GLB_GUI_USE_APPENDIX_D }}
@@ -22,6 +24,7 @@ ICE_MACH_NUMBER {{ ICE_MACH_NUMBER }}
 ICE_REYNOLDS_NUMBER {{ ICE_REYNOLDS_NUMBER }}
 
 # Category: Physical model
+
 ICE_DROP_DIAM {{ ICE_DROP_DIAM }}
 ICE_EMISSIVITY {{ ICE_EMISSIVITY }}
 ICE_GUI_BODY_FORCES {{ ICE_GUI_BODY_FORCES }}
@@ -30,23 +33,28 @@ ICE_LIQ_H2O_CONTENT {{ ICE_LIQ_H2O_CONTENT }}
 ICE_REL_HUMID {{ ICE_REL_HUMID }}
 
 # Category: Fluid properties
+
 ICE_H2O_CP {{ ICE_H2O_CP }}
 ICE_H2O_DENSITY {{ ICE_H2O_DENSITY }}
 ICE_H2O_VISCOSITY {{ ICE_H2O_VISCOSITY }}
 ICE_ICE_CONDUC {{ ICE_ICE_CONDUC }}
 ICE_ICE_CP {{ ICE_ICE_CP }}
-ICE_ICE_DENSITY {{ ICE_ICE_DENSITY }}
+ICE_IMPACT_ICE_DENSITY_LOWER_LIM {{ ICE_IMPACT_ICE_DENSITY_LOWER_LIM }}
+ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT {{ ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT }}
+ICE_IMPACT_ICE_DENSITY_UPPER_LIM {{ ICE_IMPACT_ICE_DENSITY_UPPER_LIM }}
 ICE_LAT_HEAT_EVAPOR {{ ICE_LAT_HEAT_EVAPOR }}
 ICE_LAT_HEAT_FUSION {{ ICE_LAT_HEAT_FUSION }}
 ICE_LAT_HEAT_SUBLIM {{ ICE_LAT_HEAT_SUBLIM }}
 ICE_VARIABLE_DENSITY {{ ICE_VARIABLE_DENSITY }}
 
 # Category: Crystals
+
 ICE_CRYSTAL_COEFFICIENT {{ ICE_CRYSTAL_COEFFICIENT }}
 ICE_CRYSTAL_CONTENT {{ ICE_CRYSTAL_CONTENT }}
 ICE_DEPOSITION_VARIANT {{ ICE_DEPOSITION_VARIANT }}
 
 # Category: Numerical
+
 ICE_AUTOMATIC_TIME_STEP {{ ICE_AUTOMATIC_TIME_STEP }}
 ICE_BC_SINK {{ ICE_BC_SINK }}
 ICE_BEAD_FLAG {{ ICE_BEAD_FLAG }}
@@ -65,12 +73,15 @@ ICE_NUMBER_TIME_STEP {{ ICE_NUMBER_TIME_STEP }}
 ICE_SHAPE_SMOOTHING_ITERATIONS {{ ICE_SHAPE_SMOOTHING_ITERATIONS }}
 ICE_SURFACE_THICKNESS_METHOD {{ ICE_SURFACE_THICKNESS_METHOD }}
 ICE_TIME_STEP {{ ICE_TIME_STEP }}
+ICE_WRITE_SURFACE_ROUGHNESS_FILE_FLAG 5
 
 # Category: Stress solver
+
 SMC_FILL_IN_ALLOWED_IN_PRECONDITIONING_MATRIX {{ SMC_FILL_IN_ALLOWED_IN_PRECONDITIONING_MATRIX }}
 SMC_PRECONDITIONER {{ SMC_PRECONDITIONER }}
 
 # Category: Printout
+
 ICE_GUI_NUMBERED_OUTPUT {{ ICE_GUI_NUMBERED_OUTPUT }}
 ICE_GUI_TIME_BETWEEN_OUTPUT {{ ICE_GUI_TIME_BETWEEN_OUTPUT }}
 ICE_IPS_LOAD {{ ICE_IPS_LOAD }}
@@ -78,6 +89,7 @@ ICE_OUTPUT_FORMAT {{ ICE_OUTPUT_FORMAT }}
 ICE_TIME_STEP_BETWEEN_OUTPUT {{ ICE_TIME_STEP_BETWEEN_OUTPUT }}
 
 # Category: Files
+
  ICE_AIR_FILE soln.fensap.{{ shot_index }}
  ICE_ANTI_ICING_FILE NULL
  ICE_CHT3D_FORMAT 1
@@ -113,11 +125,13 @@ ICE_TIME_STEP_BETWEEN_OUTPUT {{ ICE_TIME_STEP_BETWEEN_OUTPUT }}
  ICE_SURFACE_ROUGHNESS_FILE roughness.dat.ice.{{ shot_index }}
 
 # Category: Other
+
 ICE_AIR_CP {{ ICE_AIR_CP }}
 ICE_BOLTZMANN {{ ICE_BOLTZMANN }}
 ICE_TIME_SCHEME {{ ICE_TIME_SCHEME }}
 
 # Category: Boundary conditions
+
 FSP_BC_SUBTYPE {{ FSP_BC_SUBTYPE }}
 FSP_GUI_BC_SCREEN_MODE {{ FSP_GUI_BC_SCREEN_MODE }}
 FSP_GUI_BC_SURFACE_TYPE_FLAG {{ FSP_GUI_BC_SURFACE_TYPE_FLAG }}
@@ -157,11 +171,13 @@ ICE_WALL_OMZ {{ ICE_WALL_OMZ }}
 ICE_WALL_THICKNESS {{ ICE_WALL_THICKNESS }}
 
 # Category: External solver parameters
+
  FSP_MESH_MORPH_SWITCH 2
 ICE_GUI_NCPU_MESHING {{ ICE_GUI_NCPU_MESHING }}
 ICE_GUI_REMESHING_OPTION {{ ICE_GUI_REMESHING_OPTION }}
 
 # Category: Undefined
+
 ICE_FILE_GRID_TIMESTAMP {{ ICE_FILE_GRID_TIMESTAMP }}
 ICE_INPUT_FILE_VERSION {{ ICE_INPUT_FILE_VERSION }}
 
