Pathced difference in par drop

--- a/glacium/templates/FENSAP.DROP3D.par.j2
+++ b/glacium/templates/FENSAP.DROP3D.par.j2
@@ -29,17 +29,18 @@
 FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
 
 # Category: Parameters for time-accurate scheme
-DRP_GUI_CFL {{ DRP_GUI_CFL }}
-FSP_DIMENSIONAL_TIME_STEP {{ FSP_DIMENSIONAL_TIME_STEP }}
-FSP_GUI_CFL {{ FSP_GUI_CFL }}
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE }}
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE }}
-FSP_GUI_VARIABLE_RELAXATION {{ FSP_GUI_VARIABLE_RELAXATION }}
-FSP_INVERSE_CFL {{ FSP_INVERSE_CFL }}
-FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE {{ FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE }}
-FSP_MAX_TIME_STEPS_PER_CYCLE {{ FSP_MAX_TIME_STEPS_PER_CYCLE }}
-FSP_TIME_ACCURATE_SCHEME_ORDER {{ FSP_TIME_ACCURATE_SCHEME_ORDER }}
-FSP_TOTAL_SIMULATION_TIME {{ FSP_TOTAL_SIMULATION_TIME }}
+
+DRP_GUI_CFL {{ DROP3D_DRP_GUI_CFL }}
+FSP_DIMENSIONAL_TIME_STEP {{ DROP3D_FSP_DIMENSIONAL_TIME_STEP }}
+FSP_GUI_CFL {{ DROP3D_FSP_GUI_CFL }}
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE {{ DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE }}
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE {{ DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE }}
+FSP_GUI_VARIABLE_RELAXATION {{ DROP3D_FSP_GUI_VARIABLE_RELAXATION }}
+FSP_INVERSE_CFL {{ DROP3D_FSP_INVERSE_CFL }}
+FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE {{ DROP3D_FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE }}
+FSP_MAX_TIME_STEPS_PER_CYCLE {{ DROP3D_FSP_MAX_TIME_STEPS_PER_CYCLE }}
+FSP_TIME_ACCURATE_SCHEME_ORDER {{ DROP3D_FSP_TIME_ACCURATE_SCHEME_ORDER }}
+FSP_TOTAL_SIMULATION_TIME {{ DROP3D_FSP_TOTAL_SIMULATION_TIME }}
 
 # Category: Parameter cycles
 DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
