--- a/glacium/templates/FENSAP.ICE3D.par.j2
+++ b/glacium/templates/FENSAP.ICE3D.par.j2
@@ -40,9 +40,10 @@ ICE_H2O_DENSITY {{ ICE_H2O_DENSITY }}
 ICE_H2O_VISCOSITY {{ ICE_H2O_VISCOSITY }}
 ICE_ICE_CONDUC {{ ICE_ICE_CONDUC }}
 ICE_ICE_CP {{ ICE_ICE_CP }}
-ICE_IMPACT_ICE_DENSITY_LOWER_LIM {{ ICE_IMPACT_ICE_DENSITY_LOWER_LIM }}
-ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT {{ ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT }}
-ICE_IMPACT_ICE_DENSITY_UPPER_LIM {{ ICE_IMPACT_ICE_DENSITY_UPPER_LIM }}
+# ICE_IMPACT_ICE_DENSITY_LOWER_LIM {{ ICE_IMPACT_ICE_DENSITY_LOWER_LIM }}
+# ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT {{ ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT }}
+# ICE_IMPACT_ICE_DENSITY_UPPER_LIM {{ ICE_IMPACT_ICE_DENSITY_UPPER_LIM }}
+ICE_ICE_DENSITY {{ ICE_ICE_DENSITY }}
 ICE_LAT_HEAT_EVAPOR {{ ICE_LAT_HEAT_EVAPOR }}
 ICE_LAT_HEAT_FUSION {{ ICE_LAT_HEAT_FUSION }}
 ICE_LAT_HEAT_SUBLIM {{ ICE_LAT_HEAT_SUBLIM }}
