--- a/glacium/templates/config.drop.j2
+++ b/glacium/templates/config.drop.j2
@@ -50,50 +50,50 @@ FSP_TOTAL_SIMULATION_TIME {{ FSP_TOTAL_SIMULATION_TIME }}
 
 # Category: Parameter cycles
 
-DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
-FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL {{ FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL }}
-FSP_CYCLES_CONVERGENCE_CUTOFF {{ FSP_CYCLES_CONVERGENCE_CUTOFF }}
-FSP_GUI_CYCLE1_AV_CUTOFF {{ FSP_GUI_CYCLE1_AV_CUTOFF }}
-FSP_NUMBER_OF_PARAMETER_CYCLES {{ FSP_NUMBER_OF_PARAMETER_CYCLES }}
-FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL {{ FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL }}
+ DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL 1e-05
+ FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL 1 1e-05
+ FSP_CYCLES_CONVERGENCE_CUTOFF 1 1e-08
+ FSP_GUI_CYCLE1_AV_CUTOFF 1e-08
+ FSP_NUMBER_OF_PARAMETER_CYCLES 1
+ FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL 1 0
 
 # Category: Equations parameters
 
-FSP_DROPLET_EQUATIONS 2
-FSP_ENERGY_EQUATION 0
-FSP_GOVERNING_EQUATIONS 0
-FSP_GUI_SOLVER_MODE 1
-FSP_GUI_SOLVER_MODE_PROXY 1
+ FSP_DROPLET_EQUATIONS 2
+ FSP_ENERGY_EQUATION 0
+ FSP_GOVERNING_EQUATIONS 0
+ FSP_GUI_SOLVER_MODE 1
+ FSP_GUI_SOLVER_MODE_PROXY 1
 
 # Category: Reference conditions AIR
 
-FSP_FREESTREAM_PRESSURE {{ FSP_FREESTREAM_PRESSURE }}
-FSP_FREESTREAM_TEMPERATURE {{ FSP_FREESTREAM_TEMPERATURE }}
-FSP_FREESTREAM_VELOCITY {{ FSP_FREESTREAM_VELOCITY }}
-FSP_GUI_USE_INITIAL_TEMPERATURE {{ FSP_GUI_USE_INITIAL_TEMPERATURE }}
-FSP_MACH_NUMBER {{ FSP_MACH_NUMBER }}
-FSP_REYNOLDS_NUMBER {{ FSP_REYNOLDS_NUMBER }}
+ FSP_FREESTREAM_PRESSURE {{ FSP_FREESTREAM_PRESSURE }}
+ FSP_FREESTREAM_TEMPERATURE {{ FSP_FREESTREAM_TEMPERATURE }}
+ FSP_FREESTREAM_VELOCITY {{ FSP_FREESTREAM_VELOCITY }}
+ FSP_GUI_USE_INITIAL_TEMPERATURE {{ FSP_GUI_USE_INITIAL_TEMPERATURE }}
+ FSP_MACH_NUMBER {{ FSP_MACH_NUMBER }}
+ FSP_REYNOLDS_NUMBER {{ FSP_REYNOLDS_NUMBER }}
 
 # Category: Reference conditions DROPLET
 
-FSP_FREESTREAM_DIAMETER {{ FSP_FREESTREAM_DIAMETER }}
-FSP_FREESTREAM_LWC {{ FSP_FREESTREAM_LWC }}
-FSP_WATER_DENSITY {{ FSP_WATER_DENSITY }}
-GLB_GUI_APPENDIX_SWITCH {{ GLB_GUI_APPENDIX_SWITCH }}
-GLB_GUI_USE_APPENDIX_C {{ GLB_GUI_USE_APPENDIX_C }}
-GLB_GUI_USE_APPENDIX_C_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_C_LWC_FACTOR }}
-GLB_GUI_USE_APPENDIX_D {{ GLB_GUI_USE_APPENDIX_D }}
-GLB_GUI_USE_APPENDIX_D_TWC_FACTOR {{ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR }}
-GLB_GUI_USE_APPENDIX_O {{ GLB_GUI_USE_APPENDIX_O }}
-GLB_GUI_USE_APPENDIX_O_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR }}
+ FSP_FREESTREAM_DIAMETER {{ FSP_FREESTREAM_DIAMETER }}
+ FSP_FREESTREAM_LWC {{ FSP_FREESTREAM_LWC }}
+ FSP_WATER_DENSITY {{ FSP_WATER_DENSITY }}
+ GLB_GUI_APPENDIX_SWITCH {{ GLB_GUI_APPENDIX_SWITCH }}
+ GLB_GUI_USE_APPENDIX_C {{ GLB_GUI_USE_APPENDIX_C }}
+ GLB_GUI_USE_APPENDIX_C_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_C_LWC_FACTOR }}
+ GLB_GUI_USE_APPENDIX_D {{ GLB_GUI_USE_APPENDIX_D }}
+ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR {{ GLB_GUI_USE_APPENDIX_D_TWC_FACTOR }}
+ GLB_GUI_USE_APPENDIX_O {{ GLB_GUI_USE_APPENDIX_O }}
+ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR {{ GLB_GUI_USE_APPENDIX_O_LWC_FACTOR }}
 
 # Category: Imposed velocities for AIR
 
  FSP_ANGLE_OF_ATTACK_ALPHA {{ FSP_ANGLE_OF_ATTACK_ALPHA }}
  FSP_GUI_INITIAL_TYPE {{ FSP_GUI_INITIAL_TYPE }}
-FSP_VELOCITY_X {{ FSP_VELOCITY_X }}
-FSP_VELOCITY_Y {{ FSP_VELOCITY_Y }}
-FSP_VELOCITY_Z {{ FSP_VELOCITY_Z }}
+ FSP_VELOCITY_X {{ FSP_VELOCITY_X }}
+ FSP_VELOCITY_Y {{ FSP_VELOCITY_Y }}
+ FSP_VELOCITY_Z {{ FSP_VELOCITY_Z }}
 
 # Category: Imposed velocities for DROPLET
 
