--- a/glacium/templates/FENSAP.ICEDSWEEP.par.j2
+++ b/glacium/templates/FENSAP.ICEDSWEEP.par.j2
@@ -158,34 +158,34 @@ FSP_WALL_OMZ {{ FSP_WALL_OMZ }}
 
 # Boundary conditions DROP
 
-DRP_GUI_BC_DIAM {{ DRP_GUI_BC_DIAM }}
-DRP_GUI_BC_DIAM_CRYSTALS {{ DRP_GUI_BC_DIAM_CRYSTALS }}
-DRP_GUI_BC_DIAM_CRYSTALS_FLAG {{ DRP_GUI_BC_DIAM_CRYSTALS_FLAG }}
-DRP_GUI_BC_DIAM_FLAG {{ DRP_GUI_BC_DIAM_FLAG }}
-DRP_GUI_BC_LWC {{ DRP_GUI_BC_LWC }}
-DRP_GUI_BC_LWC_CRYSTALS_FLAG {{ DRP_GUI_BC_LWC_CRYSTALS_FLAG }}
-DRP_GUI_BC_LWC_FLAG {{ DRP_GUI_BC_LWC_FLAG }}
-DRP_GUI_BC_MELTF_CRYSTALS_FLAG {{ DRP_GUI_BC_MELTF_CRYSTALS_FLAG }}
-DRP_GUI_BC_TEMP {{ DRP_GUI_BC_TEMP }}
-DRP_GUI_BC_TEMP_CRYSTALS_FLAG {{ DRP_GUI_BC_TEMP_CRYSTALS_FLAG }}
-DRP_GUI_BC_TEMP_FLAG {{ DRP_GUI_BC_TEMP_FLAG }}
-DRP_GUI_BC_VAPOR_INIT_TYPE {{ DRP_GUI_BC_VAPOR_INIT_TYPE }}
-DRP_GUI_BC_VAP_CONC {{ DRP_GUI_BC_VAP_CONC }}
-DRP_GUI_BC_VAP_CONC_FLAG {{ DRP_GUI_BC_VAP_CONC_FLAG }}
-DRP_GUI_BC_VAP_RH {{ DRP_GUI_BC_VAP_RH }}
-DRP_GUI_BC_VAP_RH_FLAG {{ DRP_GUI_BC_VAP_RH_FLAG }}
-DRP_GUI_BC_VAP_WETBULB {{ DRP_GUI_BC_VAP_WETBULB }}
-DRP_GUI_BC_VAP_WETBULB_FLAG {{ DRP_GUI_BC_VAP_WETBULB_FLAG }}
-DRP_GUI_BC_VX {{ DRP_GUI_BC_VX }}
-DRP_GUI_BC_VX_CRYSTALS_FLAG {{ DRP_GUI_BC_VX_CRYSTALS_FLAG }}
-DRP_GUI_BC_VX_FLAG {{ DRP_GUI_BC_VX_FLAG }}
-DRP_GUI_BC_VY {{ DRP_GUI_BC_VY }}
-DRP_GUI_BC_VY_CRYSTALS_FLAG {{ DRP_GUI_BC_VY_CRYSTALS_FLAG }}
-DRP_GUI_BC_VY_FLAG {{ DRP_GUI_BC_VY_FLAG }}
-DRP_GUI_BC_VZ {{ DRP_GUI_BC_VZ }}
-DRP_GUI_BC_VZ_CRYSTALS_FLAG {{ DRP_GUI_BC_VZ_CRYSTALS_FLAG }}
-DRP_GUI_BC_VZ_FLAG {{ DRP_GUI_BC_VZ_FLAG }}
-FSP_VAPOR_WET_WALL {{ FSP_VAPOR_WET_WALL }}
+ DRP_GUI_BC_DIAM 4 "20" "" "" ""
+ DRP_GUI_BC_DIAM_CRYSTALS 4 "100" "" "" ""
+ DRP_GUI_BC_DIAM_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_DIAM_FLAG 4 1 1 1 1
+ DRP_GUI_BC_LWC 4 "0.001" "" "" ""
+ DRP_GUI_BC_LWC_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_LWC_FLAG 4 1 1 1 1
+ DRP_GUI_BC_MELTF_CRYSTALS_FLAG 4 0 1 1 1
+ DRP_GUI_BC_TEMP {{ DRP_GUI_BC_TEMP }}
+ DRP_GUI_BC_TEMP_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_TEMP_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VAPOR_INIT_TYPE 4 2 2 2 2
+ DRP_GUI_BC_VAP_CONC 4 "0.001" "" "" ""
+ DRP_GUI_BC_VAP_CONC_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VAP_RH 4 "100" "" "" ""
+ DRP_GUI_BC_VAP_RH_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VAP_WETBULB 4 "265" "" "" ""
+ DRP_GUI_BC_VAP_WETBULB_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VX 4 "0" "" "" ""
+ DRP_GUI_BC_VX_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VX_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VY 4 "0" "" "" ""
+ DRP_GUI_BC_VY_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VY_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VZ 4 "0" "" "" ""
+ DRP_GUI_BC_VZ_CRYSTALS_FLAG 4 1 1 1 1
+ DRP_GUI_BC_VZ_FLAG 4 1 1 1 1
+ FSP_VAPOR_WET_WALL 4 0 0 0 0
 
 # Screen icing
 
@@ -274,9 +274,9 @@ FSP_TIME_STEPS_BETWEEN_PRINTOUTS {{ FSP_TIME_STEPS_BETWEEN_PRINTOUTS }}
 
 # Lift and moment reference point
 
-FSP_DRAG_VECTOR_COMPONENT_X {{ FSP_DRAG_VECTOR_COMPONENT_X }}
-FSP_DRAG_VECTOR_COMPONENT_Y {{ FSP_DRAG_VECTOR_COMPONENT_Y }}
-FSP_DRAG_VECTOR_COMPONENT_Z {{ FSP_DRAG_VECTOR_COMPONENT_Z }}
+FSP_DRAG_VECTOR_COMPONENT_X 1
+FSP_DRAG_VECTOR_COMPONENT_Y 0
+FSP_DRAG_VECTOR_COMPONENT_Z 0
 FSP_GUI_DRAG_BC {{ FSP_GUI_DRAG_BC }}
 FSP_GUI_DRAG_DIRECTION {{ FSP_GUI_DRAG_DIRECTION }}
 FSP_LIFT_AXIS {{ FSP_LIFT_AXIS }}
