--- a/glacium/templates/FENSAP.ICEDSWEEP.par.j2
+++ b/glacium/templates/FENSAP.ICEDSWEEP.par.j2
@@ -274,9 +274,9 @@ FSP_TIME_STEPS_BETWEEN_PRINTOUTS {{ FSP_TIME_STEPS_BETWEEN_PRINTOUTS }}
 
 # Lift and moment reference point
 
-FSP_DRAG_VECTOR_COMPONENT_X 1
-FSP_DRAG_VECTOR_COMPONENT_Y 0
-FSP_DRAG_VECTOR_COMPONENT_Z 0
+FSP_DRAG_VECTOR_COMPONENT_X {{ FSP_DRAG_VECTOR_COMPONENT_X }}
+FSP_DRAG_VECTOR_COMPONENT_Y {{ FSP_DRAG_VECTOR_COMPONENT_Y }}
+FSP_DRAG_VECTOR_COMPONENT_Z {{ FSP_DRAG_VECTOR_COMPONENT_Z }}
 FSP_GUI_DRAG_BC {{ FSP_GUI_DRAG_BC }}
 FSP_GUI_DRAG_DIRECTION {{ FSP_GUI_DRAG_DIRECTION }}
 FSP_LIFT_AXIS {{ FSP_LIFT_AXIS }}
