--- a/glacium/templates/FENSAP.FENSAP.par.j2
+++ b/glacium/templates/FENSAP.FENSAP.par.j2
@@ -233,17 +233,27 @@ FSP_TUR_MAX_SOLVER_ITERATIONS {{ FSP_TUR_MAX_SOLVER_ITERATIONS }}
 
 # Turbulence
 
-FSP_DIMENSIONAL_WALL_ROUGHNESS {{ FSP_DIMENSIONAL_WALL_ROUGHNESS }}
-FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE }}
-FSP_GUI_ROUGHNESS_TYPE {{ FSP_GUI_ROUGHNESS_TYPE }}
-FSP_GUI_TRANSITION_FLAG {{ FSP_GUI_TRANSITION_FLAG }}
-FSP_GUI_TURBULENCE_SWITCH {{ FSP_GUI_TURBULENCE_SWITCH }}
-FSP_GUI_TURBULENCE_SWITCH_PREVIOUS {{ FSP_GUI_TURBULENCE_SWITCH_PREVIOUS }}
-FSP_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_RELAXATION_FACTOR_FOR_TURBULENCE }}
-FSP_TURBULENCE_MODEL_ITERATIONS {{ FSP_TURBULENCE_MODEL_ITERATIONS }}
-FSP_TURBULENCE_SWITCH {{ FSP_TURBULENCE_SWITCH }}
-FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO {{ FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO }}
-FSP_WALL_ROUGHNESS_SWITCH {{ FSP_WALL_ROUGHNESS_SWITCH }}
+{#FSP_DIMENSIONAL_WALL_ROUGHNESS {{ FSP_DIMENSIONAL_WALL_ROUGHNESS }}#}
+{#FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE }}#}
+{#FSP_GUI_ROUGHNESS_TYPE {{ FSP_GUI_ROUGHNESS_TYPE }}#}
+{#FSP_GUI_TRANSITION_FLAG {{ FSP_GUI_TRANSITION_FLAG }}#}
+{#FSP_GUI_TURBULENCE_SWITCH {{ FSP_GUI_TURBULENCE_SWITCH }}#}
+{#FSP_GUI_TURBULENCE_SWITCH_PREVIOUS {{ FSP_GUI_TURBULENCE_SWITCH_PREVIOUS }}#}
+{#FSP_RELAXATION_FACTOR_FOR_TURBULENCE {{ FSP_RELAXATION_FACTOR_FOR_TURBULENCE }}#}
+{#FSP_TURBULENCE_MODEL_ITERATIONS {{ FSP_TURBULENCE_MODEL_ITERATIONS }}#}
+{#FSP_TURBULENCE_SWITCH {{ FSP_TURBULENCE_SWITCH }}#}
+{#FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO {{ FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO }}#}
+{#FSP_WALL_ROUGHNESS_SWITCH {{ FSP_WALL_ROUGHNESS_SWITCH }}#}
+ FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE 1
+ FSP_GUI_ROUGHNESS_TYPE 0
+ FSP_GUI_TRANSITION_FLAG 2
+ FSP_GUI_TURBULENCE_SWITCH 1
+ FSP_GUI_TURBULENCE_SWITCH_PREVIOUS 1
+ FSP_RELAXATION_FACTOR_FOR_TURBULENCE 1 1
+ FSP_TRANSITION_FLAG 1
+ FSP_TURBULENCE_MODEL_ITERATIONS 1
+ FSP_TURBULENCE_SWITCH 1
+ FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO 1e-05
 
 # ALE
 
