--- a/glacium/templates/FENSAP.ICEDSWEEP.par.j2
+++ b/glacium/templates/FENSAP.ICEDSWEEP.par.j2
@@ -27,8 +27,8 @@
 
 # Geometrical characteristics
 
-FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH }}
-FSP_REF_AREA {{ FSP_REF_AREA }}
+FSP_CHARAC_LENGTH {{ FSP_CHARAC_LENGTH_ICED }}
+FSP_REF_AREA {{ FSP_REF_AREA_ICED }}
 
 # Parameters for time-accurate scheme
 
