--- a/glacium/templates/FENSAP.FENSAP.par.j2
+++ b/glacium/templates/FENSAP.FENSAP.par.j2
@@ -10,10 +10,12 @@
  FSP_FILE_DISPLACEMENT timebc.dat
  FSP_FILE_GMRES_DATA gmres.out
  FSP_FILE_OUTPUT_LOG out
+ FSP_FILE_VARIABLE_ROUGHNESS rough.dat
  FSP_GUI_VAPOR_RESTART_FLAG 0
  FSP_INPUT_FILE_FORMAT 1
  FSP_OUTPUT_FILE_FORMAT 1
  FSP_UNIT_ACTUATOR_DISK disk_data.dat
+ FSP_WRITE_YPLUS 0
  GLB_FILE_FLOW_SOLUTION soln
  GLB_FILE_GRID "{{ GLB_FILE_GRID }}"
  GLB_FILE_SURFACE_FORCES surface.dat
