--- a/glacium/templates/FENSAP.FENSAP.par.j2
+++ b/glacium/templates/FENSAP.FENSAP.par.j2
@@ -250,7 +250,7 @@ FSP_TUR_MAX_SOLVER_ITERATIONS {{ FSP_TUR_MAX_SOLVER_ITERATIONS }}
 {#This is the clean configuration#}
  FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE 1
  FSP_GUI_ROUGHNESS_TYPE 0
- FSP_GUI_TRANSITION_FLAG 1
+ FSP_GUI_SST_TRANSITION_FLAG 1
  FSP_GUI_TURBULENCE_SWITCH 7
  FSP_GUI_TURBULENCE_SWITCH_PREVIOUS 7
  FSP_RELAXATION_FACTOR_FOR_TURBULENCE 1 1
