--- a/glacium/templates/FENSAP.FENSAP.par.j2
+++ b/glacium/templates/FENSAP.FENSAP.par.j2
@@ -162,7 +162,8 @@
  DRP_GUI_BC_DIAM_CRYSTALS {{ DRP_GUI_BC_DIAM_CRYSTALS }}
  DRP_GUI_BC_DIAM_CRYSTALS_FLAG {{ DRP_GUI_BC_DIAM_CRYSTALS_FLAG }}
  DRP_GUI_BC_DIAM_FLAG {{ DRP_GUI_BC_DIAM_FLAG }}
- DRP_GUI_BC_LWC {{ DRP_GUI_BC_LWC }}
+{# DRP_GUI_BC_LWC {{ DRP_GUI_BC_LWC }}#}
+ DRP_GUI_BC_LWC "0.001" "" "" ""
  DRP_GUI_BC_LWC_CRYSTALS_FLAG {{ DRP_GUI_BC_LWC_CRYSTALS_FLAG }}
  DRP_GUI_BC_LWC_FLAG {{ DRP_GUI_BC_LWC_FLAG }}
  DRP_GUI_BC_MELTF_CRYSTALS_FLAG {{ DRP_GUI_BC_MELTF_CRYSTALS_FLAG }}
@@ -176,10 +177,12 @@
  DRP_GUI_BC_VAP_RH_FLAG {{ DRP_GUI_BC_VAP_RH_FLAG }}
  DRP_GUI_BC_VAP_WETBULB {{ DRP_GUI_BC_VAP_WETBULB }}
  DRP_GUI_BC_VAP_WETBULB_FLAG {{ DRP_GUI_BC_VAP_WETBULB_FLAG }}
- DRP_GUI_BC_VX {{ DRP_GUI_BC_VX }}
+{# DRP_GUI_BC_VX {{ DRP_GUI_BC_VX }}#}
+ DRP_GUI_BC_VX "0" "" "" ""
  DRP_GUI_BC_VX_CRYSTALS_FLAG {{ DRP_GUI_BC_VX_CRYSTALS_FLAG }}
  DRP_GUI_BC_VX_FLAG {{ DRP_GUI_BC_VX_FLAG }}
- DRP_GUI_BC_VY {{ DRP_GUI_BC_VY }}
+{# DRP_GUI_BC_VY {{ DRP_GUI_BC_VY }}#}
+ DRP_GUI_BC_VY "0" "" "" ""
  DRP_GUI_BC_VY_CRYSTALS_FLAG {{ DRP_GUI_BC_VY_CRYSTALS_FLAG }}
  DRP_GUI_BC_VY_FLAG {{ DRP_GUI_BC_VY_FLAG }}
  DRP_GUI_BC_VZ {{ DRP_GUI_BC_VZ }}
